--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -4,10 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".UpdateActivity">
+
+    <TextView
+        android:id="@+id/textViewRollNo2"
+        android:layout_width="246dp"
+        android:layout_height="36dp"
+        android:text="Go Bring Eggs"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.351"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.051" />
 
     <EditText
-        android:id="@+id/editName"
+        android:id="@+id/editName2"
         android:layout_width="295dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -17,23 +30,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.145" />
+        app:layout_constraintVertical_bias="0.148" />
 
     <EditText
-        android:id="@+id/editRollNo"
-        android:layout_width="295dp"
-        android:layout_height="43dp"
-        android:ems="10"
-        android:hint="Roll Number"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.258" />
-
-    <EditText
-        android:id="@+id/editSchool"
+        android:id="@+id/editSchool2"
         android:layout_width="295dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -43,10 +43,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.478" />
+        app:layout_constraintVertical_bias="0.405" />
 
     <EditText
-        android:id="@+id/editAddress"
+        android:id="@+id/editAddress2"
         android:layout_width="295dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -56,10 +56,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.584" />
+        app:layout_constraintVertical_bias="0.526" />
 
     <Spinner
-        android:id="@+id/classSpinner"
+        android:id="@+id/classSpinner2"
         android:layout_width="295dp"
         android:layout_height="43dp"
         android:entries="@array/country_arrays"
@@ -67,10 +67,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364" />
+        app:layout_constraintVertical_bias="0.273" />
 
     <Button
-        android:id="@+id/submitBtn"
+        android:id="@+id/submitBtn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
